# laura

desktop/: README.md  tauri.conf.json
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: main.rs
morsels/: memory-as-buffer.html  memory-block-deploy.html  what-is-launchmate-mem-edits.html  what-is-launchmate.html  why-launchmate.html
notes/: kavindi-craig-feb18-2026.html  progress-report-2026-03-12.html
sparks/: date-plan-feb-21-2026.html  grateful-dead-date-night.html
test/: code-execution-test.html
tidbits/: deploy-memory-block-tool.html  fooni-restaurants.html  restaurant-discovery-agent.html
usage-analytics/: founders-data.json  launchmate-usage-april-2026.html  spreadsheet-view.html
